# agent-forge

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md
.claude-plugin/: marketplace.json
.cursor-plugin/: marketplace.json
.factory-plugin/: marketplace.json
.github/workflows/: ci-evals.yml  ci-structural.yml  release.yml
docs/contributing/: adding-a-plugin.md
docs/install/: _index.md  _template.md  amp.md  chatgpt-gpts.md  claude-code.md  claude-projects.md  codex-cli.md  crush.md  cursor.md  factory-droid.md  gemini-cli.md  github-copilot-cli.md  kilocode.md  opencode.md  perplexity.md
docs/releases/: v1.0.0.md  v1.0.1.md  v1.0.2.md  v1.1.0.md
plugins/msft-arch/.factory-plugin/: plugin.json
plugins/pm/.factory-plugin/: plugin.json
plugins/prompts/.factory-plugin/: plugin.json
plugins/writing/.factory-plugin/: plugin.json
scripts/: build-install-index.py  regenerate-tier1-artifacts.py
scripts/agent_forge/: README.md  pyproject.toml
scripts/agent_forge/agent_forge/: __init__.py  cli.py  manifest.py
scripts/agent_forge/agent_forge/translators/: __init__.py  factory_droid.py
tests/evals/: _baseline_scores.json  _invoke.py  _judge.py  conftest.py
tests/evals/msft-arch/accessibility/: test_accessibility.py
tests/evals/msft-arch/ai-architect/: test_ai_architect.py
tests/evals/msft-arch/artifacts/: test_artifacts.py
tests/evals/msft-arch/docs/: test_docs.py
tests/unit/: test_github.py  test_translator_registry.py
tests/unit/translators/: test_amp.py  test_factory_droid.py  test_gemini_cli.py  test_prompt_loader.py
(+42 files in other folders)
