[project]
name = "tqn-agent-forge"
version = "1.1.0"
description = "Cross-CLI plugin marketplace installer for agent-forge"
authors = [{ name = "Rahul N Akmol", email = "rahulnakmol@gmail.com" }]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "tomli-w>=1.0",
    "platformdirs>=4.0",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
agent-forge = "agent_forge.cli:main"

[project.urls]
Homepage = "https://github.com/tqnonline/agent-forge"
Repository = "https://github.com/tqnonline/agent-forge"
Issues = "https://github.com/tqnonline/agent-forge/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent_forge"]
